--- a/src/components/interfaces/RetroOS/styles.module.css
+++ b/src/components/interfaces/RetroOS/styles.module.css
@@ -20,7 +20,8 @@
 }
 
 .xpLogoFlag {
-  font-size: 64px;
+  width: 80px;
+  height: 80px;
   margin-bottom: 16px;
 }
 
@@ -248,6 +249,12 @@
 
 .startLogo {
   font-size: 18px;
+}
+
+.windowsLogo {
+  width: 18px;
+  height: 18px;
+  flex-shrink: 0;
 }
 
 /* ========== Taskbar Items ========== */
